added "target="_blank"" to power rankings and analytics

--- a/A Hockey Blog/Evaluating NHL Contracts with Analytics What are the Best and Worst Contracts in the NHL.html
+++ b/A Hockey Blog/Evaluating NHL Contracts with Analytics What are the Best and Worst Contracts in the NHL.html
@@ -86,7 +86,7 @@ His first season in Raleigh with the Carolina Hurricanes seems to have sparked M
 <p>Games Played	Even Strength Goals	Even Strength Assists	Even Strength Points	Corsi For Percentage	Cap Hit Percentage</p>
 <p>31	4	2	6	47%	13.41%</p>
 
-This contract buyout was one everyone saw coming.  Only putting up 6 even strength points (10 total points) with that big of a cap hit is a disaster.  Perry suffered a <a href="https://bleacherreport.com/articles/2797783-ducks-corey-perry-out-5-months-after-undergoing-knee-surgery-for-mcl-injury">torn MCL</a> before the start of last season, limiting his playing time as he started the season on February 2nd, 2019.  Things could be looking up as he signed a 1 year show me deal with the Dallas Stars at $3.25 million ($1.5 million being performance bonuses).  Look for Perry to rebound this year with an explosive Stars team.
+This contract buyout was one everyone saw coming.  Only putting up 6 even strength points (10 total points) with that big of a cap hit is a disaster.  Perry suffered a <a href="https://bleacherreport.com/articles/2797783-ducks-corey-perry-out-5-months-after-undergoing-knee-surgery-for-mcl-injury"target="_blank">torn MCL</a> before the start of last season, limiting his playing time as he started the season on February 2nd, 2019.  Things could be looking up as he signed a 1 year show me deal with the Dallas Stars at $3.25 million ($1.5 million being performance bonuses).  Look for Perry to rebound this year with an explosive Stars team.
 
 <h4><b>Bobby Ryan, Forward, Ottawa Senators</b></h4>
 <p>Games Played	Even Strength Goals	Even Strength Assists	Even Strength Points	Corsi For Percentage	Cap Hit Percentage</p>
@@ -98,7 +98,7 @@ The Ottawa Senators are just a bad team.  Thankfully, the Sens are only paying $
 <p>Games Played	Even Strength Goals	Even Strength Assists	Even Strength Points	Corsi For Percentage	Cap Hit Percentage</p>
 <p>60	4	1	5	44.3%	9.63%</p>
 
-This one hurts (no pun intended) to write.  Kesler had a back injury that shut him down for the Ducks last season and now he is sitting out the upcoming 2019-2020 season with that <a href="https://www.bardown.com/injury-riddled-ryan-kesler-releases-statement-on-playing-future-1.1305394">injury</a>.  It is questionable as to whether he will ever play hockey again.  The injury (and bad team) are the reasons to blame here, not the player himself.  In his heyday Kesler was an elite two-way playmaker with the Vancouver Canucks, putting up 73 points in his Selke (best two way forward) winning season.
+This one hurts (no pun intended) to write.  Kesler had a back injury that shut him down for the Ducks last season and now he is sitting out the upcoming 2019-2020 season with that <a href="https://www.bardown.com/injury-riddled-ryan-kesler-releases-statement-on-playing-future-1.1305394"target="_blank">injury</a>.  It is questionable as to whether he will ever play hockey again.  The injury (and bad team) are the reasons to blame here, not the player himself.  In his heyday Kesler was an elite two-way playmaker with the Vancouver Canucks, putting up 73 points in his Selke (best two way forward) winning season.
 
 <h4><b>Marc Staal, Defenseman, New York Rangers</b></h4>
 <p>Games Played	Even Strength Goals	Even Strength Assists	Even Strength Points	Corsi For Percentage	Cap Hit Percentage</p>
