made adjustments to css files of secondary pages

--- a/rename to docs/Podcast.html
+++ b/rename to docs/Podcast.html
@@ -5,7 +5,7 @@
 <title>The Bender's Blog</title>
   </head>
   <body>
-   <h1>Opinion</h1>
+   <h1>Podcast</h1>
 
   <ul>
     <li>
@@ -13,5 +13,7 @@
       <a href=''></a>
       <a href=''></a>
 <a href='homepage.html'>HOME</a>
+</li>
+</ul>
     </body>
  </html>
