--- a/rename to docs/Player Profiles.html
+++ b/rename to docs/Player Profiles.html
@@ -5,7 +5,7 @@
 <title>The Bender's Blog</title>
   </head>
   <body>
-   <h1>Podcast</h1>
+   <h1>Player Profiles</h1>
 
   <ul>
     <li>
@@ -13,5 +13,7 @@
       <a href=''></a>
       <a href=''></a>
 <a href='homepage.html'>HOME</a>
-    </body>
+</li>
+</ul>
+</body>
  </html>
